--- a/geogame/index.html
+++ b/geogame/index.html
@@ -13,6 +13,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>GeoGame</title>
   <link rel="stylesheet" href="./style.css">
+
+  <meta name="description" content="GeoGame - Test your geography knowledge with fun and interactive map challenges!" />
+  <meta name="keywords" content="GeoGame, geography, map, quiz, game, world, countries, capitals, flags, learning" />
+  <meta name="author" content="Tran Hai Dang" />
+  <!-- Open Graph / Facebook -->
+  <meta property="og:title" content="GeoGame" />
+  <meta property="og:description" content="Test your geography knowledge with fun and interactive map challenges!" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://tiniquiz.com/geogame/" />
+  <meta property="og:image" content="https://tiniquiz.com/geogame/favicon.svg" />
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="GeoGame" />
+  <meta name="twitter:description" content="Test your geography knowledge with fun and interactive map challenges!" />
+  <meta name="twitter:image" content="https://tiniquiz.com/geogame/favicon.svg" />
 </head>
 
 <body>
