--- a/gomoku/index.html
+++ b/gomoku/index.html
@@ -2,20 +2,44 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./favicon.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Gomoku</title>
-    <link rel="stylesheet" href="./style.css">
+  <!-- Google Tag Manager -->
+  <script>
+    (function (w, d, s, l, i) { w[l] = w[l] || []; w[l].push({ 'gtm.start': new Date().getTime(), event: 'gtm.js' }); var f = d.getElementsByTagName(s)[0], j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f); })(window, document, 'script', 'dataLayer', 'GTM-56G5F5W4');
+  </script>
+  <!-- End Google Tag Manager -->
 
-    <meta name="description" content="Gomoku - Classic strategy board game. Place 5 stones in a row to win!" />
-    <meta name="keywords" content="Gomoku, Five in a Row, board game, strategy, game" />
-    <meta name="author" content="Tran Hai Dang" />
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="./favicon.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Gomoku</title>
+  <link rel="stylesheet" href="./style.css">
+
+  <meta name="description" content="Gomoku - Classic strategy board game. Place 5 stones in a row to win!" />
+  <meta name="keywords" content="Gomoku, Five in a Row, board game, strategy, game" />
+  <meta name="author" content="Tran Hai Dang" />
+  <!-- Open Graph / Facebook -->
+  <meta property="og:title" content="Gomoku" />
+  <meta property="og:description" content="Gomoku - Classic strategy board game. Place 5 stones in a row to win!" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://tiniquiz.com/gomoku/" />
+  <meta property="og:image" content="https://tiniquiz.com/gomoku/favicon.svg" />
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Gomoku" />
+  <meta name="twitter:description" content="Gomoku - Classic strategy board game. Place 5 stones in a row to win!" />
+  <meta name="twitter:image" content="https://tiniquiz.com/gomoku/favicon.svg" />
 </head>
 
 <body>
-    <div id="app"></div>
-    <script type="module" src="/main.ts"></script>
+  <!-- Google Tag Manager (noscript) -->
+  <noscript>
+    <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-56G5F5W4" height="0" width="0"
+      style="display:none;visibility:hidden"></iframe>
+  </noscript>
+  <!-- End Google Tag Manager (noscript) -->
+
+  <div id="app"></div>
+  <script type="module" src="/main.ts"></script>
 </body>
 
 </html>
