--- a/gomoku/index.html
+++ b/gomoku/index.html
@@ -51,7 +51,113 @@
     </noscript>
     <!-- End Google Tag Manager (noscript) -->
 
-    <div id="app"></div>
+    <div id="app">
+        <div class="header-controls">
+            <button id="home-btn" class="icon-btn" aria-label="Back to Home">
+                <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none"
+                    stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                    <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path>
+                    <polyline points="9 22 9 12 15 12 15 22"></polyline>
+                </svg>
+            </button>
+            <h1 id="game-title">Gomoku</h1>
+        </div>
+
+        <!-- Language Switcher -->
+        <div class="lang-switcher">
+            <button class="lang-btn active" data-lang="en">EN</button>
+            <button class="lang-btn" data-lang="ja">JA</button>
+            <button class="lang-btn" data-lang="vi">VI</button>
+        </div>
+
+        <!-- Menu View -->
+        <div id="menu-view" class="card animate-fade-in">
+            <h2 id="menu-title">Game Setup</h2>
+            <div class="menu-options">
+                <div class="option-group">
+                    <label id="label-mode">Game Mode</label>
+                    <div class="mode-selector">
+                        <button id="mode-two-player" class="mode-btn active" data-mode="TWO_PLAYER">2 Players</button>
+                        <button id="mode-vs-ai" class="mode-btn" data-mode="VS_AI">vs AI</button>
+                    </div>
+                </div>
+
+                <div class="option-group">
+                    <label id="label-board-size">Board Size</label>
+                    <div class="size-selector">
+                        <button class="size-btn" data-size="9">9 × 9</button>
+                        <button class="size-btn active" data-size="15">15 × 15</button>
+                        <button class="size-btn" data-size="19">19 × 19</button>
+                    </div>
+                </div>
+
+                <button id="start-btn" class="primary">Start Game</button>
+            </div>
+        </div>
+
+        <!-- Game View -->
+        <div id="game-view" class="card hidden animate-fade-in">
+            <button id="new-game-btn" class="primary">New Game</button>
+            <div class="game-info">
+                <div class="current-turn">
+                    <div class="turn-indicator black"></div>
+                    <span id="turn-text">Black's Turn</span>
+                </div>
+                <div class="move-count">
+                    <span id="label-move">Move</span>: <span id="move-number">0</span>
+                </div>
+                <div class="game-timer">
+                    <span id="label-time">Time</span>: <span id="game-timer">00:00</span>
+                </div>
+            </div>
+
+            <div id="board-container">
+                <svg id="board" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
+                    <!-- Board will be rendered here -->
+                </svg>
+            </div>
+        </div>
+
+        <!-- Result View -->
+        <div id="result-view" class="card hidden animate-fade-in">
+            <h2 id="result-title">Game Over!</h2>
+
+            <div class="winner-display" id="winner-display">
+                <!-- Winner info will be injected here -->
+            </div>
+
+            <div class="game-stats">
+                <div class="stat">
+                    <div class="stat-label" id="label-total-moves">Total Moves</div>
+                    <div class="stat-value" id="total-moves">0</div>
+                </div>
+                <div class="stat">
+                    <div class="stat-label" id="label-total-time">Total Time</div>
+                    <div class="stat-value" id="total-time">00:00</div>
+                </div>
+            </div>
+
+            <!-- High Scores Table -->
+            <div class="high-scores-container">
+                <h3 id="high-scores-title">High Scores (vs AI)</h3>
+                <table id="high-scores-table">
+                    <thead>
+                        <tr>
+                            <th id="th-rank">Rank</th>
+                            <th id="th-moves">Moves</th>
+                            <th id="th-time">Time</th>
+                            <th id="th-date">Date</th>
+                        </tr>
+                    </thead>
+                    <tbody id="high-scores-body">
+                        <!-- Scores injected here -->
+                    </tbody>
+                </table>
+            </div>
+
+            <button id="restart-btn" class="primary">Play Again</button>
+        </div>
+    </div>
     <script type="module" src="/main.ts"></script>
 </body>
 
