add goal image to sliding puzzle

--- a/sliding/index.html
+++ b/sliding/index.html
@@ -106,6 +106,14 @@
                 </div>
             </div>
 
+            <!-- Reference Board -->
+            <div class="reference-container">
+                <div class="reference-label" id="reference-label">Goal:</div>
+                <div id="reference-board" class="reference-board">
+                    <!-- Reference tiles will be rendered here -->
+                </div>
+            </div>
+
             <div id="board-container">
                 <div id="puzzle-board" class="puzzle-board">
                     <!-- Board tiles will be rendered here -->
