add AI to checkers

--- a/checkers/index.html
+++ b/checkers/index.html
@@ -74,6 +74,14 @@
         <div id="menu-view" class="card animate-fade-in">
             <h2 id="menu-title">Game Setup</h2>
             <div class="setup-group">
+                <h3 id="label-mode">Game Mode</h3>
+                <div class="radio-group">
+                    <button class="mode-btn active" data-mode="TWO_PLAYER" id="mode-two-player">Two Players</button>
+                    <button class="mode-btn" data-mode="VS_AI" id="mode-vs-ai">VS AI</button>
+                </div>
+            </div>
+
+            <div class="setup-group">
                 <h3 id="label-board-size">Board Size</h3>
                 <div class="radio-group">
                     <label class="radio-label">
