fix checkers setup

--- a/checkers/index.html
+++ b/checkers/index.html
@@ -76,8 +76,8 @@
             <div class="setup-group">
                 <h3 id="label-mode">Game Mode</h3>
                 <div class="radio-group">
-                    <button class="mode-btn active" data-mode="TWO_PLAYER" id="mode-two-player">Two Players</button>
-                    <button class="mode-btn" data-mode="VS_AI" id="mode-vs-ai">VS AI</button>
+                    <button class="mode-btn active" data-mode="TWO_PLAYER" id="mode-two-player">2 Players</button>
+                    <button class="mode-btn" data-mode="VS_AI" id="mode-vs-ai">vs AI</button>
                 </div>
             </div>
 
