--- a/checkers/index.html
+++ b/checkers/index.html
@@ -35,12 +35,14 @@
     <meta property="og:title" content="Checkers" />
     <meta property="og:description" content="Classic checkers board game with strategic gameplay!" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://tiniquiz.com/checker/" />
+    <meta property="og:url" content="https://tiniquiz.com/checkers/" />
+    <meta property="og:image" content="https://tiniquiz.com/checkers/favicon.svg" />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Checkers" />
     <meta name="twitter:description" content="Classic checkers board game with strategic gameplay!" />
+    <meta name="twitter:image" content="https://tiniquiz.com/checkers/favicon.svg" />
 </head>
 
 <body>
