--- a/sliding/index.html
+++ b/sliding/index.html
@@ -35,14 +35,14 @@
     <meta property="og:title" content="Sliding Puzzle" />
     <meta property="og:description" content="Classic sliding tile puzzle game with multiple board sizes!" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://tiniquiz.com/slidingpuzzle/" />
-    <meta property="og:image" content="https://tiniquiz.com/slidingpuzzle/favicon.svg" />
+    <meta property="og:url" content="https://tiniquiz.com/sliding/" />
+    <meta property="og:image" content="https://tiniquiz.com/sliding/favicon.svg" />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Sliding Puzzle" />
     <meta name="twitter:description" content="Classic sliding tile puzzle game with multiple board sizes!" />
-    <meta name="twitter:image" content="https://tiniquiz.com/slidingpuzzle/favicon.svg" />
+    <meta name="twitter:image" content="https://tiniquiz.com/sliding/favicon.svg" />
 </head>
 
 <body>
