add difficulty to checkers

--- a/checkers/index.html
+++ b/checkers/index.html
@@ -83,6 +83,15 @@
                 </div>
             </div>
 
+            <div class="setup-group" id="difficulty-section">
+                <h3 id="label-difficulty">Difficulty</h3>
+                <div class="radio-group">
+                    <button class="difficulty-btn" data-difficulty="EASY" id="diff-easy">Easy</button>
+                    <button class="difficulty-btn active" data-difficulty="MEDIUM" id="diff-medium">Medium</button>
+                    <button class="difficulty-btn" data-difficulty="HARD" id="diff-hard">Hard</button>
+                </div>
+            </div>
+
             <div class="setup-group">
                 <h3 id="label-board-size">Board Size</h3>
                 <div class="radio-group">
