add high scores to othello

--- a/othello/index.html
+++ b/othello/index.html
@@ -197,6 +197,23 @@
                     </div>
                 </div>
 
+                <div class="high-scores-container hidden">
+                    <h3 id="label-high-scores">High Scores</h3>
+                    <table class="high-scores-table">
+                        <thead>
+                            <tr>
+                                <th id="label-rank">Rank</th>
+                                <th id="label-moves">Moves</th>
+                                <th id="label-time">Time</th>
+                                <th id="label-date">Date</th>
+                            </tr>
+                        </thead>
+                        <tbody id="high-scores-body">
+                            <!-- High scores will be rendered here -->
+                        </tbody>
+                    </table>
+                </div>
+
                 <button id="restart-btn" class="primary">Play Again</button>
             </div>
         </div>
