--- a/mancala/index.html
+++ b/mancala/index.html
@@ -102,6 +102,15 @@
                     </div>
                 </div>
 
+                <div class="option-group">
+                    <label id="label-initial-stones">Stones Per Pit</label>
+                    <div class="stones-selector">
+                        <button class="stones-btn" data-stones="3">3</button>
+                        <button class="stones-btn active" data-stones="4">4</button>
+                        <button class="stones-btn" data-stones="5">5</button>
+                    </div>
+                </div>
+
                 <button id="start-btn" class="primary">Start Game</button>
             </div>
         </div>
