fix country filter

--- a/geogame/index.html
+++ b/geogame/index.html
@@ -82,10 +82,7 @@
 
         <div id="country-filter-container" class="hidden">
           <label id="label-country-filter">Filter by Country</label>
-          <select id="country-filter">
-            <option value="allCountries">All Countries</option>
-            <!-- Options will be populated by JavaScript -->
-          </select>
+          <select id="country-filter"></select>
         </div>
 
         <div id="region-filter-container">
