--- a/chess/index.html
+++ b/chess/index.html
@@ -134,27 +134,30 @@
             <div class="promotion-pieces">
                 <button class="promotion-piece" data-piece="QUEEN">
                     <svg viewBox="0 0 100 100" width="60" height="60">
-                        <path class="piece-icon" fill="currentColor" d="M50 30l-3 8-8-3-3 8-8-3v12l-4 15h56l-4-15v-12l-8 3-3-8-8 3-3-8M30 60h40l-3 6H33z"/>
+                        <path class="piece-icon" fill="currentColor"
+                            d="M50 30l-3 8-8-3-3 8-8-3v12l-4 15h56l-4-15v-12l-8 3-3-8-8 3-3-8M30 60h40l-3 6H33z" />
                     </svg>
-                    <span>Queen</span>
+                    <span id="promotion-queen">Queen</span>
                 </button>
                 <button class="promotion-piece" data-piece="ROOK">
                     <svg viewBox="0 0 100 100" width="60" height="60">
-                        <path class="piece-icon" fill="currentColor" d="M35 30h6v6h6v-6h6v6h6v-6h6v25h8v10H28v-10h8V30z"/>
+                        <path class="piece-icon" fill="currentColor"
+                            d="M35 30h6v6h6v-6h6v6h6v-6h6v25h8v10H28v-10h8V30z" />
                     </svg>
-                    <span>Rook</span>
+                    <span id="promotion-rook">Rook</span>
                 </button>
                 <button class="promotion-piece" data-piece="BISHOP">
                     <svg viewBox="0 0 100 100" width="60" height="60">
-                        <path class="piece-icon" fill="currentColor" d="M50 25a6 6 0 110 12 6 6 0 010-12M46 40l-8 22h24l-8-22M34 60h32l-4 8H38z"/>
+                        <path class="piece-icon" fill="currentColor"
+                            d="M50 25a6 6 0 110 12 6 6 0 010-12M46 40l-8 22h24l-8-22M34 60h32l-4 8H38z" />
                     </svg>
-                    <span>Bishop</span>
+                    <span id="promotion-bishop">Bishop</span>
                 </button>
                 <button class="promotion-piece" data-piece="KNIGHT">
                     <svg viewBox="0 0 100 100" width="60" height="60">
-                        <path class="piece-icon" fill="currentColor" d="M50 28q-8-4-12 4-4 8 0 16l-4 4q-4 4 0 12l-4 16h40l-4-16q4-8 0-12l-4-4q4-8 0-16-4-8-12-4"/>
+                        <path class="piece-icon" fill="currentColor" d="M20 80h60l-10-10q6-20 8-35l-6-10l-6 5q-10 3-18 12l-6 8l5 8q6-3 10-5q-3 12 3 17L30 70l-10 10z"/>
                     </svg>
-                    <span>Knight</span>
+                    <span id="promotion-knight">Knight</span>
                 </button>
             </div>
         </div>
@@ -162,4 +165,5 @@
 
     <script type="module" src="/main.ts"></script>
 </body>
+
 </html>
